@@ -96,6 +96,7 @@ enum known_vendorid {
   VID_STRONGSWAN_2_8_8		= 74,
   VID_STRONGSWAN_2_8_9		= 75,
   VID_STRONGSWAN_2_8_10		= 76,
+  VID_STRONGSWAN_2_8_11		= 77,
 
   VID_STRONGSWAN_4_0_0		= 80,
   VID_STRONGSWAN_4_0_1		= 81,
@@ -134,6 +135,7 @@ enum known_vendorid {
   VID_STRONGSWAN_4_2_13		=113,
   VID_STRONGSWAN_4_2_14		=114,
   VID_STRONGSWAN_4_2_15		=115,
+  VID_STRONGSWAN_4_2_15		=116,
 
   /* 101 - 200 : NAT-Traversal */
   VID_NATT_STENBERG_01		=151,
