@@ -1,3 +1,11 @@
+strongswan-4.2.17
+-----------------
+
+- The RDN parser vulnerability discovered by Orange Labs research team
+  was not completely fixed in version 4.2.16. Some more modifications
+  had to be applied to the asn1_length() function.
+
+
 strongswan-4.2.16
 -----------------
 
